style.css
@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
:root {
  --header-height: 3rem;
  --font-semi: 600;
}

:root {
  --first-color: #4070F4;
  --second-color: #0E2431;
}

:root {
  --body-font: 'Open Sans', sans-serif;
  --big-font-size: 2rem;
  --h2-font-size: 1.25rem;
  --normal-font-size: 0.938rem;
}

@media screen and (min-width: 768px) {
  :root {
    --big-font-size: 3.5rem;
    --h2-font-size: 2rem;
    --normal-font-size: 1rem;
  }
}

:root {
  --mb-1: 0.5rem;
  --mb-2: 1rem;
  --mb-3: 1.5rem;
  --mb-4: 2rem;
  --mb-5: 2.5rem;
  --mb-6: 3rem;
}

:root {
  --z-back: -10;
  --z-normal: 1;
  --z-tooltip: 10;
  --z-fixed: 100;
}

*, ::before, ::after {
  box-sizing: border-box;
}

html {
  scroll-behavior: smooth;
}

body {
  margin: var(--header-height) 0 0 0;
  font-family: var(--body-font);
  font-size: var(--normal-font-size);
  color: var(--second-color);
}

h1, h2, p {
  margin: 0;
}

ul {
  margin: 0;
  padding: 0;
  list-style: none;
}

a {
  text-decoration: none;
}

img {
  max-width: 100%;
  /* height: auto; */
  display: flex;
}

body {
  justify-content: center;
}

.section-title {
  position: relative;
  font-size: var(--h2-font-size);
  color: var(--first-color);
  margin-top: var(--mb-2);
  margin-bottom: var(--mb-4);
  text-align: center;
}

.section-title::after {
  position: absolute;
  content: "";
  width: 64px;
  height: 0.18rem;
  left: 0;
  right: 0;
  margin: auto;
  top: 2rem;
  background-color: var(--first-color);
}

.section {
  padding-top: 2rem;
  padding-bottom: .5rem;
}

/* Layout */

/* .bd-grid {
  max-height: 650px;
  display: flex;
  justify-content: center;
} */

body {
  margin: 0;
  padding: 0;
}

* {
  box-sizing: border-box;
}

/* .l-header {
  width: 100%;
  position: fixed;
  top: 0;
  left: 0;
  z-index: var(--z-fixed);
  background-color: #fff;
  box-shadow: 0 1px 4px rgba(146, 161, 176, .15);
} */

/*===== NAV =====*/

.nav {
  height: var(--header-height);
  display: flex;
  position: relative;
  justify-content: space-between;
  align-items: center;
  font-weight: var(--font-semi);
}

.nav__logo {
  /* position: absolute; */
  /* top: -10%; */
  color: var(--second-color);
  font-size: 4vh;
  margin: 1rem;
}

.nav__menu {
  /* padding-top: 2rem; */
  height: 100%;
}

.nav__menu ul {
  display: flex;
  margin: 0;
  padding: 0;
}

.nav__menu li {
  list-style: none;
}

.nav__menu li a {
  display: block;
  text-decoration: none;
  color: black;
  padding: 1rem;
}

.nav__menu li:hover {
  background-color: #4070F4;
  transition: all .2s;
}

.nav__link:hover {
  color: rgb(251, 251, 251);
}

.nav__toggle {
  position: absolute;
  top: .65rem;
  right: .6rem;
  display: none;
  flex-direction: column;
  justify-content: space-between;
  width: 30px;
  height: 21px;
}

.nav__toggle .bar {
  height: 3px;
  width: 100%;
  background-color: black;
  border-radius: 10px;
}

@media screen and (max-width: 768px) {
  .nav {
    flex-direction: column;
    align-items: flex-start;
  }
  .nav__toggle {
    display: flex;
  }
  .nav__menu {
    display: none;
    width: 100%;
    margin-top: 1rem;
    z-index: 2;
  }
  .nav__menu ul {
    top: 8%;
    width: 100%;
    flex-direction: row;
    justify-content: center;
  }
  .nav__menu ul li {
    text-align: right;
  }
  .nav__list {
    background-color: rgba(54, 98, 227, 0.5);
  }
  .nav__menu ul li a {
    margin-top: .25rem;
    padding: .5rem 1rem;
  }
  .nav__menu.active {
    display: flex;
  }
  .nav__link:hover {
    background-color: white;
    color: black;
  }
  /* .nav__menu li:hover {
    background-color: white;
    transition: all .2s; 
  } */
}

.nav__item {
  margin-bottom: var(--mb-4);
  text-align: center;
}


/* .nav__link:hover::after {
    position: absolute;
    content: "";
    width: 100%;
    height: 0.18rem;
    left: 0;
    top: 2rem;
    background-color: var(--first-color);
  } */

/* .nav__menu {
  position: relative;
  height: 100%;
  padding: 2rem;
  transition: .5s; */

/* } */

/*Active menu*/

/* .active::after {
  position: absolute;
  content: "";
  width: 100%;
  height: 0.18rem;
  left: 0;
  top: 2rem;
  background-color: var(--first-color);
} */

/*=== Show menu ===*/

/* .show {
  right: 0;
} */

/* } */

/*===== HOME =====*/

.home {
  position: relative;
  bottom: 10%;
  row-gap: 1rem;
  margin-bottom: 10rem;
}

.home__data {
  position: relative;
  top: 20%;
  left: 20%;
  align-self: center;
  font-size: xx-large;
  justify-content: space-between;
}

.home__title-color {
  color: var(--first-color);
}

.home__social {
  position: relative;
  left: 20%;
  margin-top: 4rem;
  display: flex;
  flex-direction: row;
}

@media (max-width: 767px) {
  .home__social {
    padding-top: 3rem;
    position: relative;
    top: 60%;
    display: flex;
    flex-direction: row;
  }
  .home__social-icon i {
    font-size: 3em;
    padding: .5rem;
  }
  .home {
    padding-bottom: 5rem;
  }
  .navbar__name {
    margin-top: .5rem;
  }
}

.home__social-icon {
  width: max-content;
  margin-bottom: var(--mb-2);
  font-size: 1.5rem;
  color: var(--second-color);
}

.home__social-icon:hover {
  color: var(--first-color);
}

.home__img {
  position: absolute;
  right: 0;
  bottom: 0;
  width: 295px;
}

/*BUTTONS*/

.button {
  display: inline-block;
  outline: none;
  font-size: larger;
  font-weight: 0;
  background-color: var(--first-color);
  color: #fff;
  padding: .75rem 2.5rem;
  border-radius: .5rem;
}

.button:hover {
  box-shadow: 0 10px 36px rgba(0, 0, 0, .15);
}

/* ===== ABOUT =====*/

.about__subtitle {
  margin-bottom: 1rem;
  font-weight: bolder;
}

.about__img img {
  position: relative;
  margin-top: 7rem;
  left: 3%;
  width: 320px;
  height: 420px;
  border-radius: .5rem;
}

.about__desc {
  font-size: 1.25vw;
  position: absolute;
  top: 8rem;
  right: 20rem;
  width: 30rem;
  text-align: left;
  margin: auto;
  width: 50%;
  height: 10%;
}

@media all and (max-width: 1370px) {
  .about__img img {
    justify-content: center;
    display: block;
    margin: auto;
    left: 0%;
    border-radius: .5rem;
  }
  .about__desc {
    font-size: 5.25vw;
    position: relative;
    bottom: 8rem;
    left: .5rem;
    text-align: left;
    margin: auto;
    width: 90%;
    height: 10%;
  }
}

/* ===== SKILLS =====*/

.p_container {
  row-gap: 2rem;
  text-align: center;
}

.skills__subtitle {
  margin-bottom: var(--mb-2);
}

.skills__text {
  margin-bottom: var(--mb-4);
}

.skills__container {
  display: flex;
  flex-direction: row;
  justify-content: center;
  text-align: center;
}

.skills__data {
  /* display: flex; */
  justify-content: space-between;
  align-items: center;
  position: relative;
  /* width: 11rem; */
  /* height: 3rem; */
  font-weight: bold;
  padding: .5rem.75rem;
  margin: 3rem;
  margin-bottom: var(--mb-4);
  border-radius: .5rem;
  box-shadow: 0 4px 25px rgba(14, 36, 49, .15);
}

.skills__boxicon {
  font-size: 2rem;
  margin-right: var(--mb-2);
  color: var(--first-color);
}

.skills__faicon {
  font-size: 1.65rem;
  margin-right: var(--mb-2);
  color: var(--first-color);
}

.skills__names {
  display: flex;
  align-items: center;
}

.skills__bar {
  position: absolute;
  left: 0;
  bottom: 0;
  background-color: var(--first-color);
  height: .25rem;
  border-radius: .5rem;
  z-index: var(--z-back);
}

.skills__img {
  border-radius: .5rem;
}

/* Projects */

.back__button {
  position: absolute;
  top: -3%;
  padding: 0.35em 1.2em;
  border: 0.1em solid black;
  margin: 2em 0.3em 0.3em 2.5em;
  border-radius: 0.12em;
  font-weight: bolder;
  color: black;
  text-align: center;
  transition: all 0.2s;
}

.back__button:hover {
  color: #FFFFFF;
  background-color: #4070F4;
}

.work__container {
  row-gap: 2rem;
  text-align: center;
}

#gimp__para {
  position: relative;
}

.work__img {
  box-shadow: 0 4px 25px rgba(14, 36, 49, .15);
  border-radius: .5rem;
  width: 250px;
  height: 500px;
  word-wrap: break-word;
  position: relative;
}

.work__button--left {
  position: absolute;
  top: 83%;
  left: 23.25%;
}

.work__button--middle {
  position: absolute;
  top: 80%;
  left: 43%;
}

.work__button--right {
  position: absolute;
  top: 80%;
  left: 62.5%;
}

.btn {
  border: none;
  color: black;
  display: inline-block;
  font-size: 16px;
  margin: 4px 2px;
  cursor: pointer;
  display: inline-block;
  background-color: var(--first-color);
  color: #fff;
  padding: .75rem 2.5rem;
  font-weight: var(--font-semi);
  border-radius: .5rem;
}

.btn:hover {
  box-shadow: 0 10px 36px rgba(0, 0, 0, .15);
}

.work__container {
  display: grid;
  grid-template: 1fr / 1fr;
  place-items: center;
}

@media all and (max-width: 700) {
  .work__container {
    background-color: aqua;
    display: grid;
    grid-template: 1fr / 1fr;
    place-items: center;
  }
}

/* ===== CONTACT =====*/

.contact__button {
  position: relative;
  top: 25%;
  left: 20%;
  font-family: 'Open Sans';
  border: none;
  outline: none;
  font-size: 2.2rem;
  cursor: pointer;
  font-weight: 400;
  background-color: var(--first-color);
  color: #fff;
  padding: .75rem 2rem;
  border-radius: .5rem;
}

.p__project {
  position: relative;
  min-height: 150px;
}

/* PROJECT TITLES */

.project1__title {
  position: absolute;
}

#skills {
  position: relative;
  margin-bottom: 200px;
}

/* FOOTER */

.footer {
  background-color: var(--second-color);
  color: #fff;
  text-align: center;
  font-weight: var(--font-semi);
  padding: 2rem 0;
}

.footer__title {
  font-size: 2rem;
  margin-bottom: var(--mb-4);
}

.footer__social {
  margin-bottom: var(--mb-4);
}

.footer__icon {
  font-size: 1.5rem;
  color: #fff;
  margin: 0 var(--mb-2)
}

/* ===== MEDIA QUERIES=====*/

.responsive {
  /* width: 100%; */
  height: auto;
}

@media screen and (min-width: 768px) {
  body {
    margin: 0;
  }
  .section {
    /* padding-top: 4rem; */
    padding-bottom: 3rem;
  }
  .section-title {
    margin-bottom: var(--mb-6);
  }
  .section-title::after {
    width: 80px;
    top: 3rem;
  }
  .nav__link {
    color: var(--second-color);
  }
  .home {
    height: 100vh;
  }
  .home__data {
    align-self: flex-end;
  }
  .home__social {
    position: absolute;
    top: 10%;
    flex-direction: row;
    grid-gap: 10px;
  }
  .home__social-icon i {
    font-size: 2.5em;
  }
  .home__img {
    width: 457px;
    bottom: 15%;
  }
  .work__container {
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows: repeat(2, 1fr);
    column-gap: 2rem;
  }
  .contact__form {
    width: 360px;
  }
  .contact__container {
    justify-items: center;
  }
}

@media screen and (min-width: 1024px) {
  .bd-grid {
    margin-left: auto;
    margin-right: auto;
  }
  .home__img {
    right: 10%;
  }
}

